package edu.fiuba.algo3.modelo.Acciones;

public class Invisible implements Defensa {

    @Override
    public void recibirDanio(Danio danio, Vida vida, Escudo escudo) {

    }

    @Override
    public void recibirDanio(Danio danio, Vida vida) {

    }
}
