@startuml

interface Defensa {
    +recibirDanio(danio)
}

class Invisible {
    +recibirDanio(danio)
}

class Detectable {
    +recibirDanio(danio)
}

abstract class Unidad {
    - vida
    - tiempoConstruccion
    - costos
    + construir()
    + atacar()
    + recibirDanio(danio)
}


abstract class UnidadProtoss {
    - escudo
    + construir()
    +recibirDanio(danio)
}

class Zealot {
    -atacador
    +atacar()
}

class Dragon {
    -atacador
    +atacar()
}

class Scout {
    -atacador
    +atacar()

}

abstract class UnidadZerg {
    + construir()
    +recibirDanio(danio)
}


class AmoSupremo {
    +detectarUnidad()
}

class Zangano {
    + recolectar()
    +mutarReserva()
    +mutarExtractor()
    +mutarGuarida()
    +mutarEspiral()
}

class Zerling {
    + atacar()
}

class Hidralisco {
    -atacador
    +atacar()
}

class Mutalisco {
    -atacador
    +evolucionarGuardian()
    +evolucionarDevorador()
    +atacar()
}

class Guardian {
    +atacar()
}

class Devorador {
    +atacar()
}

interface Atacador {
    +atacar(unidad)
    +atacar(construccion)
}

class AtaqueTierra {
    -danio
    +atacar(unidad)
    +atacar(construccion)
}

class AtaqueAire {
    -danio
    +atacar(unidad)
    +atacar(construccion)
}


interface Invisiblibilidad {
}

interface Detector {
    +detectarUnidad()
}

interface MutadorConstruccion {
    +mutarReserva()
    +mutarExtractor()
    +mutarGuarida()
    +mutarEspiral()
}

interface Evolucionador {
    +evolucionarGuardian()
    +evolucionarDevorador()
}

Unidad <|-- UnidadZerg
Unidad <|-- UnidadProtoss

UnidadZerg <|--- Zangano
UnidadZerg <|--- AmoSupremo
UnidadZerg <|--- Zerling
UnidadZerg <|--- Hidralisco
UnidadZerg <|--- Mutalisco
UnidadZerg <|--- Guardian
UnidadZerg <|--- Devorador

UnidadProtoss <|--- Zealot
UnidadProtoss <|--- Dragon
UnidadProtoss <|--- Scout

AmoSupremo ..|> Detector

Zealot ..|> Invisiblibilidad

Zangano ..|> MutadorConstruccion

Unidad *- Defensa
Unidad *-left- Atacador

Defensa <|.up. Invisible
Defensa <|.up. Detectable

Atacador <|.up. AtaqueTierra
Atacador <|.up. AtaqueAire

Mutalisco ..|> Evolucionador

@enduml